# infonavit-api

./: Cargo.toml  README.md  Rocket.toml
db/: infonavit.db
src/: cors.rs  credit_repo.rs  date_formatting.rs  db_init.rs  db_traits.rs  document_repo.rs  file_utils.rs  info.rs  lib.rs  main.rs  payment_repo.rs  types.rs
templates/: index.html.tera  layout.html.tera
