[package]
name = "infonavit-web"
version = "0.1.0"
authors = ["rodrigo debian <correo.rodrigo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json", "tera_templates"]