[package]
name = "infonavit_api"
version = "0.1.0"
authors = ["rodrigo debian <correo.rodrigo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]

[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled"]

[dev-dependencies.chrono]
version = "0.4"